# TECH-NOTE-JP

./: .gitattributes  .gitignore  MIGRATION_REPORT.md  README.md
financial-recall-agent/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
financial-recall-agent/sql/reward_missing/: 01_build_base_frame.sql  02_policy_recalculate.sql  03_reconcile.sql
financial-recall-agent/src/recall_agent/: __init__.py
financial-recall-agent/tests/: test_architecture_contracts.py  test_gemini_client.py  test_generic_rule_runner.py  test_h02_placeholder_structure.py  test_h07_duckdb_repository.py  test_policy_rag_h01_h08.py  test_rule_assets.py  test_rule_card_engine_controls.py  test_submission_structure.py
gamelytics-ab-analysis/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
gamelytics-ab-analysis/data/: README.md
gamelytics-ab-analysis/reports/: ab_analysis.md  data_audit.md  retention_analysis.md
gamelytics-ab-analysis/reports/tables/: ab_group_summary.csv  business_scenarios.csv  inference_summary.csv  retention_monthly_heatmap_data.csv  retention_summary.csv  (+2 more)
gamelytics-ab-analysis/scripts/: run_ab_analysis.py  run_retention_analysis.py
gamelytics-ab-analysis/tests/: test_core.py
storeops-triage-agent/: .env.example  .gitignore  README.md  pyproject.toml
storeops-triage-agent/docs/: architecture.md  data-contract.md  evaluation.md
storeops-triage-agent/reports/: synthetic_50_validation_matrix.csv  synthetic_50_validation_report.json  synthetic_50_validation_report.md
storeops-triage-agent/scripts/: generate_offline_payment_synthetic_50.py
storeops-triage-agent/tests/: conftest.py  test_project_contract.py  test_submission_pipeline.py
(+525 files in other folders)
