[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamelytics-ab-analysis"
version = "0.1.0"
description = "Reproducible mobile game promotion A/B and retention analysis."
requires-python = ">=3.10"
dependencies = [
  "pandas==3.0.1",
  "numpy==2.3.5",
  "matplotlib==3.11.0",
  "seaborn==0.13.2",
]

[project.optional-dependencies]
test = ["pytest==9.1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
